Fixed #33 Header overlaps page title

--- a/style.css
+++ b/style.css
@@ -967,8 +967,8 @@ button.menu-toggle:hover {
 --------------------------------------------------------------*/
 .content-area,
 .widget-area {
-	margin-top: 60px;
-	margin-bottom: 60px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 	float: left;
 }
 
@@ -2208,6 +2208,14 @@ div.wpcf7-mail-sent-ok {
 }
 
 @media screen and (min-width: 769px) {
+	/*-----------------------
+	### Content
+	-------------------------*/
+	.content-area,
+	.widget-area {
+		margin-top: 60px;
+		margin-bottom: 60px;
+	}
 
 	/*-----------------------
 	### Header
@@ -2458,14 +2466,6 @@ div.wpcf7-mail-sent-ok {
 	}
 	.sticky-navigation {
 		position: fixed;
-	}
-
-}
-
-@media screen and (max-width: 600px) {
-
-	#page {
-		padding-top: 0 !important;
 	}
 
 }
